--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,12 @@
-certifi==2024.2.2
-charset-normalizer==3.3.2
-cli-exit-tools==1.2.6
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.1
-cycler==0.12.1
+scipy
 facenet-pytorch==2.6.0
-fake-winreg==1.6.3
-filelock==3.14.0
-fonttools==4.51.0
-fsspec==2024.3.1
-glob2==0.7
-idna==3.7
-importlib_resources==6.4.0
-intel-openmp==2021.4.0
-Jinja2==3.1.3
-kiwisolver==1.4.5
-lib-detect-testenv==2.0.8
-lib-platform==1.2.10
-lib-registry==2.0.10
-logging-utilities==4.4.1
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-mkl==2021.4.0
-mpmath==1.3.0
-networkx==3.2.1
-numpy==1.26.4
-opencv-python==4.9.0.80
-packaging==24.0
-pillow==10.2.0
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-requests==2.31.0
-scipy==1.13.0
-six==1.16.0
-sympy==1.12
-tbb==2021.12.0
-torch==2.2.2
-torchvision==0.17.2
-tqdm==4.66.4
-typing==3.7.4.3
-typing_extensions==4.11.0
-urllib3==2.2.1
-warn==0.1.0
-wrapt==1.16.0
-zipp==3.18.1
+libgl1
+opencv-python
+matplotlib
+warn
+typing
+logging-utilities
+lib-platform
+glob2
+urllib3
+streamlit
