--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-facenet-pytorch==2.6.0
-glob2==0.7
-matplotlib==3.8.4
-numpy==1.26.4
+numpy
 opencv-python-headless
-packaging==24.0
-pillow==10.2.0
-requests==2.31.0
-scipy==1.13.0
-torch==2.2.2
-tqdm==4.66.4
-typing==3.7.4.3
-urllib3==2.2.1
-warn==0.1.0
+scipy
+torch
+facenet-pytorch
+matplotlib
+pillow
+warn
+typing
+logging-utilities
+lib-platform
+glob2
+urllib3
+tqdm
